<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewEditActivity">

    <!-- Top App Bar -->
    <LinearLayout
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:title="@string/create_task_title"
        android:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_keyboard_backspace"
        app:titleTextColor="@color/black">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:padding="14dp"
            android:src="@drawable/ic_keyboard_backspace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSurface"
            android:text="@string/view_and_edit"
            android:textSize="21sp" />

    </LinearLayout>

    <!-- Title -->
    <EditText
        android:id="@+id/titleInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_standard_around_margin"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="@dimen/dimens_larger_around_margin"
        android:background="@null"
        android:hint="@string/add_a_title"
        android:padding="8dp"
        tools:text="large Title"
        android:textSize="@dimen/dimen_standard_task_title"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

    <!-- Content -->
    <EditText
        android:id="@+id/contentInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_standard_around_margin"
        android:layout_marginTop="@dimen/dimens_larger_around_margin"
        android:layout_marginEnd="@dimen/dimens_standard_around_margin"
        android:layout_marginBottom="@dimen/dimens_larger_around_margin"
        android:background="@null"
        android:drawableStart="@drawable/ic_text"
        android:drawablePadding="8dp"
        android:hint="@string/add_description"
        android:padding="8dp"
        tools:text="Sample content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout" />

    <!-- Date EditText -->
    <EditText
        android:id="@+id/dateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_standard_around_margin"
        android:layout_marginTop="@dimen/dimens_larger_around_margin"
        android:layout_marginEnd="@dimen/dimens_standard_around_margin"
        android:layout_marginBottom="@dimen/dimens_larger_around_margin"
        android:background="@null"
        android:drawableStart="@drawable/ic_due_date"
        android:drawablePadding="8dp"
        android:hint="@string/add_due_date"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentInputLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="28dp"
        android:background="?customOverlayBackground"
        >
        <!-- Complete Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/completeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="6dp"
            android:padding="12dp"
            android:text="@string/mark_completed"
            android:textColor="?colorOnPrimarySurface"
            app:backgroundTint="?colorPrimary"
            app:icon="@drawable/ic_check"
            app:iconTint="?colorOnPrimarySurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/delete"
            android:textColor="?colorOnPrimarySurface"
            app:backgroundTint="?colorPrimary"
            app:icon="@drawable/ic_delete_forever_outline"
            app:iconTint="?colorOnPrimarySurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/completeButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
