<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateTaskActivity">

    <!-- Top App Bar -->
    <LinearLayout
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:padding="14dp"
            android:src="@drawable/ic_keyboard_backspace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_task"
            android:textColor="?colorOnSurface"
            android:textSize="21sp" />

    </LinearLayout>

    <!-- Title -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/add_a_title"
        android:padding="8dp"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_standard_task_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Content -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_description"
        android:padding="8dp"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
        app:startIconDrawable="@drawable/ic_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Date EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_due_date"
        android:padding="8dp"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentInputLayout"
        app:startIconDrawable="@drawable/ic_due_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Create Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/button_text_create"
        android:textColor="?colorOnSurface"
        app:backgroundTint="@color/fao_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>